--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
@@ -35,6 +35,13 @@
 </head>
 
 <body>
+    <header class="button-menu">
+        <button aria-label="Desayuno" @click="" class="menu">Desayuno</button>
+        <button aria-label="Comida" @click="" class="menu">Comida</button>
+        <button aria-label="Nuevo pedido" @click="" class="menu">Nuevo Pedido</button>
+        <button aria-label="Historial de Pedido" @click="" class="menu">Historial</button>
+    </header>
+
   <noscript>
     This is your fallback content in case JavaScript fails to load.
   </noscript>
