--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Tool to take orders in a fast food restaurant">
+  <meta name="keywords" content="Restaurant, Management, Software, POS, fast food">
+  <meta name="author" content="AcheZeta">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Burger Queen</title>
@@ -13,12 +16,12 @@
   <!--[if IE]><link rel="shortcut icon" href="/static/img/icons/favicon.ico"><![endif]-->
   <!-- Add to home screen for Android and modern mobile browsers -->
   <link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>static/manifest.json">
-  <meta name="theme-color" content="#4DBA87">
+  <meta name="theme-color" content="#FF8684">
 
   <!-- Add to home screen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="vuergerq">
+  <meta name="apple-mobile-web-app-title" content="Burger Queen">
   <link rel="apple-touch-icon"
     href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-touch-icon-152x152.png">
   <link rel="mask-icon" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/safari-pinned-tab.svg"
@@ -40,10 +43,16 @@
   <noscript>
     This is your fallback content in case JavaScript fails to load.
   </noscript>
-  <div id="app"></div>
+  <div id="app" class="container"></div>
   <!-- Todo: only include in production -->
   <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
   <!-- built files will be auto injected -->
+  
 </body>
 
 </html>
+
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    
