--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   <meta name="author" content="AcheZeta">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Burger Queen</title>
+
+  <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32"
     href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16"
     href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/favicon-16x16.png">
   <!--[if IE]><link rel="shortcut icon" href="/static/img/icons/favicon.ico"><![endif]-->
+
   <!-- Add to home screen for Android and modern mobile browsers -->
   <link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>static/manifest.json">
   <meta name="theme-color" content="#FF8684">
@@ -25,7 +27,8 @@
   <link rel="apple-touch-icon"
     href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-touch-icon-152x152.png">
   <link rel="mask-icon" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/safari-pinned-tab.svg"
-    color="#4DBA87">
+    color="#FF8684">
+
   <!-- Add to home screen for Windows -->
   <meta name="msapplication-TileImage"
     content="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/msapplication-icon-144x144.png">
@@ -35,17 +38,20 @@
           if (file.match(/\.(js|css)$/)) { %>
   <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>"
     as="<%= file.match(/\.css$/)?'style':'script' %>"><% }}} %>
+
+  <!-- Link Google Font y Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <title>Burger Queen</title>
 </head>
 
 <body>
-
 
   <noscript>
     This is your fallback content in case JavaScript fails to load.
   </noscript>
   <div id="app" class="container"></div>
+
   <script>
     // CODELAB: Register service worker.
     if ('serviceWorker' in navigator) {
@@ -58,7 +64,8 @@
     }
 
   </script>
-  <!-- Todo: only include in production -->
+
+<!-- Todo: only include in production -->
   <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
   <!-- built files will be auto injected -->
 </body>
